tests/snapshots/run_wpt_conformance__onnx_hardSwish_float32_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "hard_swish.https.any.js",
    "hardSwish float32 1D tensor",
    "onnx",
    "PASS",
)
